--- a/09.01-05_[End-to-End_Example]_Recommender_Take_1.ipynb
+++ b/09.01-05_[End-to-End_Example]_Recommender_Take_1.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "**Helpful Links: Where the Data Lives**\n",
     "\n",
-    "Open Academic Society: [Project Page](https://www.openacademic.ai/oag/)\n",
+    "Open Academic Society which doesn't work: [Project Page](https://www.openacademic.ai/oag/)\n",
     "\n",
     "Microsoft Research: [MS Academic Graph](https://www.microsoft.com/en-us/research/project/microsoft-academic-graph/)"
    ]
